--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "engines": {
     "node": "16"
   },
+  "homepage": "https:\/\/Andre-ARS.github.io/trybe-wallet",
   "dependencies": {
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "10.0.4",
     "@testing-library/user-event": "7.2.1",
     "bootstrap": "4.5.2",
+    "gh-pages": "^3.2.3",
     "prop-types": "^15.8.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -25,6 +27,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",  
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx"
